--- a/simple_chlorophyll_analysis_Egypt.ipynb
+++ b/simple_chlorophyll_analysis_Egypt.ipynb
@@ -24,7 +24,8 @@
     "import cartopy.io.img_tiles as cimgt\n",
     "import matplotlib \n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy.ma as ma"
+    "import numpy.ma as ma\n",
+    "import warnings"
    ]
   },
   {
@@ -34,7 +35,7 @@
    "outputs": [],
    "source": [
     "#Dataset path\n",
-    "nc_path_chl1 = os.path.abspath(r'p:\\11201274-odyssea\\10-Workshops\\Egypt_Training_2021\\sv03-med-ogs-pft-rean-m_1613583524278.nc');  \n",
+    "nc_path_chl1 = os.path.abspath('sv03-med-ogs-pft-rean-m_1613583524278.nc');  \n",
     "\n",
     "#Dataset\n",
     "dataset_chl1 = Dataset(nc_path_chl1) #chl\n"
