--- a/simple_chlorophyll_analysis_Egypt.ipynb
+++ b/simple_chlorophyll_analysis_Egypt.ipynb
@@ -99,6 +99,7 @@
    ],
    "source": [
     "#Interrogate netCDF file\n",
+    "warnings.filterwarnings('ignore')\n",
     "print (dataset_chl1.file_format)\n",
     "print (dataset_chl1.dimensions.keys()) #dimensions\n",
     "print (dataset_chl1.dimensions['time'])\n",
